--- a/index.html
+++ b/index.html
@@ -203,17 +203,9 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
-          </p>
-
-          <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+           Hi, I'm Madhu K R, a dedicated software engineer passionate about building innovative and efficient solutions. 
+           With expertise in designing, developing, and optimizing software systems, I strive to deliver impactful results. 
+           Welcome to my portfolio, where I showcase my skills, projects, and journey in technology.
           </p>
         </section>
 
